--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,7 +10,18 @@ and open the template in the editor.
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div>Simple Todo Application</div>
+        <div id="container">
+            <div class="controls">
+                <h1>My Awesome TODO</h1>
+                <input type="text" id="input"><br>
+                <button type="button" id="add">Add TODO</button>
+                <button type="button" id="remove">Remove done TODO</button>
+            </div>
+            <ul id="list">
+                <li class="mycheck"><input type="checkbox" id="check"><label>Go to gym</label></li>
+                <li class="mycheck"><input type="checkbox" id="check" checked><label>Record youtube Videos</label></li>
+            </ul>
+        </div>
         <script src="Todo.js"></script>
     </body>
 </html>
