--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,6 +7,7 @@ and open the template in the editor.
     <head>
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="shortcut icon" href="#" />
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -19,7 +20,10 @@ and open the template in the editor.
             </div>
             <ul id="list">
                 <li class="mycheck"><input type="checkbox" id="check"><label>Go to gym</label></li>
-                <li class="mycheck"><input type="checkbox" id="check" checked><label>Record youtube Videos</label></li>
+                <li class="mycheck"><input type="checkbox" id="check"><label>Record youtube Videos</label></li>
+                <li class="mycheck"><input type="checkbox" id="check" checked><label>Complete the Data Structure </label></li>
+                <li class="mycheck"><input type="checkbox" id="check" checked><label>Buy Bread</label></li>
+                <li class="mycheck"><input type="checkbox" id="check" checked><label>Plan for a Dinner tonight</label></li>
             </ul>
         </div>
         <script src="Todo.js"></script>
